[package]
name = "testcases"
version = "0.0.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos compatibility tests"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
futures = "0.3.21"
rand = "0.7.3"
reqwest = { version = "0.11.10", features = ["json", "cookies", "blocking"] }
serde_json = "1.0.81"
tokio = { version = "1.21.0", features = ["full"] }
hex = "0.4.3"

aptos-genesis = { path = "../../crates/aptos-genesis", features = ["testing"] }
aptos-global-constants = { path = "../../config/global-constants" }
aptos = { path = "../../crates/aptos", features = ["fuzzing"] }
aptos-logger = { path = "../../crates/aptos-logger" }
aptos-rest-client = { path = "../../crates/aptos-rest-client" }
aptos-sdk = { path = "../../sdk" }
aptos-config = { path = "../../config" }
aptos-types = { path = "../../types" }
aptos-keygen = { path = "../../crates/aptos-keygen" }

forge = { path = "../forge" }

[[test]]
name = "forge-local-compatibility"
harness = false

[[test]]
name = "forge-local-performance"
harness = false
